Bug 127720 - FILEOPEN PPTX Y error bars gone from XY Scatter chart
Summary: FILEOPEN PPTX Y error bars gone from XY Scatter chart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.4.7.2 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.4.0 target:7.3.2
Keywords: bibisected, bisected, filter:pptx, regression
: 132721 132782 (view as bug list)
Depends on:
Blocks: OOXML-Chart Chart
  Show dependency treegraph
 
Reported: 2019-09-23 13:59 UTC by Buovjaga
Modified: 2022-02-25 17:37 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2019-09-23 13:59:42 UTC
1. Open attachment 67520 [details]
2. Compare with attachment 107107 [details] from PowerPoint

The data points should have "whiskers" to denote variability.

In 4.3 (last commit of bibisect repo) the whiskers still show, but in 4.4.7 they are already gone.
Comment 1 Xisco Faulí 2019-09-23 15:09:15 UTC
Regression introduced by:

author	Kohei Yoshida <kohei.yoshida@collabora.com>	2014-06-09 14:32:53 -0400
committer	Kohei Yoshida <kohei.yoshida@collabora.com>	2014-06-10 10:02:25 -0400
commit c5539bb585370f095cb6c09e38a7dd005d237295 (patch)
tree 6900b98a72398334c04eddc40856799748f429fa
parent 178550923533b7c015e29d957a2fc3857ba73eb3 (diff)
fdo#79676: Initialize with a default chart only from the UI.

Bisected with: bibisect-44max
Comment 2 NISZ LibreOffice Team 2019-10-19 18:41:05 UTC
For the record, the "whiskers" are Y error bars.
The chart is a XY (Scatter) type chart.
Opening it and checking the "Select Chart Element" box shows there is no "Y Error Bars" component for any data series.

However changing the chart type to Line in PP and opening the file in Impress, there is an "Y Error Bars" component for the Series1 data series and the error bars also correctly show up on the chart.
Comment 3 Justin L 2022-02-23 12:37:36 UTC
repro 7.4+
confirmed the 4.4 commit identified in comment 1.  However, reverting it doesn't fix the issue. However bug 103984 gives an excellent clue about how to solve.
Comment 4 Justin L 2022-02-23 12:38:20 UTC
*** Bug 132782 has been marked as a duplicate of this bug. ***
Comment 5 Justin L 2022-02-23 19:14:56 UTC
*** Bug 132721 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2022-02-23 19:53:31 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dfd0717b3f55eeb15a5634e52d7d0ed544d17578

tdf#127720 chart2: create new columns for error bars

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Buovjaga 2022-02-24 09:24:03 UTC
Thanks a lot, looks fine now

Arch Linux 64-bit
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 8f2b1b1cb84e1ae3139eb90b8efdf61e608adbad
CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded Jumbo
Built on 24 February 2022
Comment 8 Commit Notification 2022-02-24 09:27:33 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/446c491c2f0d2643f83c0f7981b04bced785894c

tdf#127720 chart2: create new columns for error bars

It will be available in 7.3.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.